# Finance_simulator

./: CMakeLists.txt  README.md
include/: Asset.h  Cash.h  Stock.h
src/: Cash.cpp  Stock.cpp  mainFINSIM.cpp
